--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
+target/m2e-wtp/web-resources/META-INF/maven/com.xiaozhu/springDemo/pom.properties
+target/m2e-wtp/web-resources/META-INF/maven/com.xiaozhu/springDemo/pom.properties
+target/m2e-wtp/web-resources/META-INF/maven/com.xiaozhu/springDemo/pom.properties
+target/m2e-wtp/web-resources/META-INF/maven/com.xiaozhu/springDemo/pom.properties
+target/m2e-wtp/web-resources/META-INF/maven/com.xiaozhu/springDemo/pom.properties
